--- a/app/src/main/res/layout/activity_account.xml
+++ b/app/src/main/res/layout/activity_account.xml
@@ -10,52 +10,51 @@
     tools:ignore="ExtraText">
 
 
-
     <ImageView
         android:id="@+id/topImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginBottom="0dp"
         android:scaleType="fitCenter"
         android:src="@drawable/sign_in"
-        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.614"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/welcomeBackText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="4dp"
         android:text="Welcome back"
         android:textColor="@color/black"
         android:textSize="24sp"
         android:textStyle="bold"
-        app:layout_constraintVertical_bias="0.1"
-        android:layout_marginBottom="0dp"
-        app:layout_constraintTop_toBottomOf="@id/topImage"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.513"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/topImage" />
 
     <TextView
         android:id="@+id/subText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="12dp"
         android:text="Sign in to access your account"
         android:textColor="@color/black"
         android:textSize="16sp"
-        android:layout_marginTop="0dp"
-        app:layout_constraintTop_toBottomOf="@id/welcomeBackText"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
+        app:layout_constraintTop_toBottomOf="@id/welcomeBackText" />
 
     <TextView
         android:id="@+id/emailLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="@android:color/white"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:layout_marginStart="32dp"
         android:layout_marginTop="72dp"
         app:layout_constraintTop_toBottomOf="@id/topImage"
@@ -70,7 +69,7 @@
         android:layout_marginBottom="16dp"
         android:hint="Enter your email"
         android:paddingStart="48dp"
-        android:background="#D3D3D3"
+        android:background="#E4E0E0"
         app:layout_constraintTop_toBottomOf="@id/emailLabel"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -87,7 +86,7 @@
         android:id="@+id/passwordLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
         android:layout_marginStart="24dp"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/emailEditText"
@@ -102,7 +101,7 @@
         android:layout_marginBottom="16dp"
         android:hint="Enter your password"
         android:paddingStart="48dp"
-        android:background="#D3D3D3"
+        android:background="#E4E0E0"
         app:layout_constraintTop_toBottomOf="@id/passwordLabel"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
@@ -140,25 +139,36 @@
         android:id="@+id/nextButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="112dp"
-        android:backgroundTint="@color/teal_700"
+        android:layout_marginTop="116dp"
+        android:backgroundTint="@color/dark_brown"
         android:text="Next"
         android:textAllCaps="false"
         android:textColor="@color/black"
         android:textSize="24dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/forgotPasswordTextView" />
+
+    <TextView
+        android:id="@+id/newMemberTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New member?"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/nextButton" />
 
     <TextView
         android:id="@+id/registerNowTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="New member? Register now"
+        android:text="Register now"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
-        android:textColor="@color/black"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textColor="#0000FF"
+        app:layout_constraintStart_toEndOf="@id/newMemberTextView"
         app:layout_constraintTop_toBottomOf="@id/nextButton" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
