--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,10 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="blue">#0000FF</color>
+    <color name="dark_brown">#4E342E</color>
+    <color name="deep_brown">#3E2723</color>
+    <color name="coffee_cream">#D7CCC8</color>
+    <color name="light_cream">#EFEBE9</color>
+
 </resources>
