--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,27 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
-    <style name="Theme.Group3" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/teal_200</item>
-        <item name="colorPrimaryVariant">@color/teal_200</item>
+
+
+    <style name="Theme.KawaCafe" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+        <!-- Primary brand color (warm coffee tone). -->
+        <item name="colorPrimary">@color/dark_brown</item>
+        <item name="colorPrimaryVariant">@color/deep_brown</item>
         <item name="colorOnPrimary">@color/white</item>
-        <!-- Secondary brand color. -->
-        <item name="colorSecondary">@color/teal_200</item>
-        <item name="colorSecondaryVariant">@color/teal_700</item>
+
+
+        <item name="colorSecondary">@color/coffee_cream</item>
+        <item name="colorSecondaryVariant">@color/light_cream</item>
         <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
+
+
+        <item name="android:windowBackground">@color/black</item>
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
-        <!-- Customize your theme here. -->
+
+
+        <item name="android:textColorPrimary">@color/black</item>
+        <item name="android:textColorSecondary">@color/coffee_cream</item>
+        <item name="android:colorAccent">@color/coffee_cream</item>
+
+
     </style>
+
 </resources>
